   * Fix bug 15366 : overlay terrains badly interacting with submerge and height adjustments
 * Language and i18n:
   * Updated translations: Czech, Finnish, Italian, Lithuanian, Polish
 * Multiplayer
   * Fixed players getting different side colours across scenarios of mp
     campaigns
   * Fixed bug 14754: Host can start game before the client has selected a
     leader (Debian bug #555964)
   * Fix bug #15382 (Player doesn't get transported to the next scenario)
   * Fix bug #15383 (Multiplayer Campaigns can't be loaded from savegame)
   * Fix bug #15391 (Warnings in multiplayer games)
   * Fix bug #15398 (Multiplayer Campaign aborted after endlevel)
   * Fix bug #15399 (Leaders of the ai sides in LoW multiplayer scenario2 are missing)
   * Allow a 1-sides game to be started (Debian bug #568029)
   * Fixed A New Land not working when there are empty sides
 * User interface:
   * Rewrote the sizing code of the tree view widget
   * Don't show turn dialog once the level has ended
   * Fix the empty games in the MP lobby game list
 * Miscellaneous and bug fixes:
   * Fix bug #15429 (Units created by WML can only get the Neutral alignment)

Version 1.7.13-1.8beta6:
 * AI:
   * Port [protect_leader], [protect_unit], [protect_location] to new-style ai
     config, which is a goal with name=protect, which accepts a SLF [criteria].
   * Changed names of AI log domains, to have a more uniform naming style.
     Most names became shorter.
 * Campaigns:
   * Fixed a bug in several scenarios causing some enemy units to disappear when
     loading a save
 * Engine:
   * Fix bug #15146: made kill event with animate="yes" recheck the presence of
     unit before animating, fixing the assertion failure (in case the unit is
     removed by other wml events like last breath)
   * All unit-related images are team colored, this includes missiles and haloes
 * Graphics:
   * Add and wire two new Drake attack icons.
 * Language and i18n: